update: Ensure that the ghost's position does not change too much at the start of a drag.

--- a/src/components/Tree/components/TreeItem/TreeItem.module.css
+++ b/src/components/Tree/components/TreeItem/TreeItem.module.css
@@ -9,8 +9,7 @@
     pointer-events: none;
     width: 100%;
     padding: 0;
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-top: 20px; 
     opacity: 0.8;
 
     .TreeItem {
